--- a/src/components/Resource/style.scss
+++ b/src/components/Resource/style.scss
@@ -1,4 +1,4 @@
-.Resource { background: url('../../images/panel_beige.png'); width: 100px; height: 100px; padding: 5px; float: left; margin: 0 10px 0 0;
+.Resource { background: url('../../images/panel_beige.png'); width: 100px; height: 100px; padding: 5px; float: left; margin: 0 5px 0 0; box-shadow: 0px 0px 5px rgba(#000, .2); border-radius: 5px;
     .name { width: 100%; text-align: center; font-size: 12px; text-transform: uppercase; text-shadow: 0px 0px 1px rgba(#FFF, .4); color: rgba(#000, .7); font-weight: 800; margin: 5px 0 0 0; }
     .progress { width: 80px; height: 5px; background: rgba(#FFF, .5); margin: 10px auto 2px auto;
         .fill { width: 50%; height: 100%; background: rgba(#FFF, .8); transition: all .2s;
