--- a/src/components/Resource/style.scss
+++ b/src/components/Resource/style.scss
@@ -1,14 +1,27 @@
-.Resource { background: url('../../images/panel_beige.png'); width: 100px; height: 100px; padding: 5px; float: left; margin: 0 5px 0 0; box-shadow: 0px 0px 5px rgba(#000, .2); border-radius: 5px;
-    .name { width: 100%; text-align: center; font-size: 12px; text-transform: uppercase; text-shadow: 0px 0px 1px rgba(#FFF, .4); color: rgba(#000, .7); font-weight: 800; margin: 5px 0 0 0; }
-    .progress { width: 80px; height: 5px; background: rgba(#FFF, .5); margin: 10px auto 2px auto;
-        .fill { width: 50%; height: 100%; background: rgba(#FFF, .8); transition: all .2s;
-            &.warning { background: rgba(#D1C449, .8) }
-            &.danger { background: rgba(#F04E22, .8) }
+.Resource { float: left; margin: 0 5px 0 0; width: 100px;
+    .panel{ background: url('../../images/panel_beige.png'); width: 100px; height: 100px; padding: 5px; box-shadow: 0px 0px 5px rgba(#000, .2); border-radius: 5px;
+        .name { width: 100%; text-align: center; font-size: 12px; text-transform: uppercase; text-shadow: 0px 0px 1px rgba(#FFF, .4); color: rgba(#000, .7); font-weight: 800; margin: 5px 0 0 0; }
+        .progress { width: 80px; height: 5px; background: rgba(#FFF, .5); margin: 10px auto 2px auto;
+            .fill { width: 50%; height: 100%; background: rgba(#FFF, .8); transition: all .2s;
+                &.warning { background: rgba(#D1C449, .8) }
+                &.danger { background: rgba(#F04E22, .8) }
+            }
+        }
+        .amount { text-align: center; font-size: 10px; }
+        .persec { text-align: center; font-size: 10px; margin: 0px 0px 5px 0; }
+        .action { width: 70px; height: 15px; font-size: 10px; text-align: center; line-height: 15px; background: rgba(#000, .3); text-transform: uppercase; margin: 0 auto; border-radius: 3px; cursor: pointer; transition: .2s all;
+            &.active { border-top: 1px solid rgba(#000, .3); border-left: 1px solid rgba(#000, .3); background: rgba(#000, .5); color: rgba(#FFF, .7) }
         }
     }
-    .amount { text-align: center; font-size: 10px; }
-    .persec { text-align: center; font-size: 10px; margin: 0px 0px 5px 0; }
-    .action { width: 70px; height: 15px; font-size: 10px; text-align: center; line-height: 15px; background: rgba(#000, .3); text-transform: uppercase; margin: 0 auto; border-radius: 3px; cursor: pointer; transition: .2s all;
-        &.active { border-top: 1px solid rgba(#000, .3); border-left: 1px solid rgba(#000, .3); background: rgba(#000, .5); color: rgba(#FFF, .7) }
+    .storage { width: 100px; height: 57px; background: url('../../images/panel_beige.png'); position: relative; border-radius: 5px; padding: 5px; cursor: pointer;
+        .name { width: 100%; text-align: center; font-size: 12px; text-transform: uppercase; text-shadow: 0px 0px 1px rgba(#FFF, .4); color: rgba(#000, .7); font-weight: 800; margin: 5px 0 0 0; }
+        .cost { margin: 0; padding: 0; list-style-type: none; text-align: center;
+            li { display: inline-block; background: #FFF; margin-left: 5px; height: 15px; line-height: 15px; font-size: 12px; border-radius: 2px; padding-right: 3px; font-weight: normal;
+                &.wood { background: #DE9959; }
+                &.stone { background: #737373; color: rgba(#FFF, .7); }
+                span { display: inline-block; font-size: 8px; width: 12px; height: 10px; text-align: center; line-height: 11px; border-right: 1px solid rgba(#FFF, .2); color: rgba(#000, .4); margin-right: 2px; }
+            }
+        }
+        &:after { content: ''; display: block; width: 100px; height: 5px; position: absolute; bottom: 0; left: 0; background: url('../../images/panel_beige.png') bottom left; }
     }
 }
