--- a/src/components/Resource/style.scss
+++ b/src/components/Resource/style.scss
@@ -13,13 +13,13 @@
             &.active { border-top: 1px solid rgba(#000, .3); border-left: 1px solid rgba(#000, .3); background: rgba(#000, .5); color: rgba(#FFF, .7) }
         }
     }
-    .storage { width: 100px; height: 57px; background: url('../../images/panel_beige.png'); position: relative; border-radius: 5px; padding: 5px; cursor: pointer;
+    .storage { width: 100px; height: auto; background: url('../../images/panel_beige.png'); position: relative; border-radius: 5px; padding: 5px 5px 8px 5px; cursor: pointer;
         .name { width: 100%; text-align: center; font-size: 12px; text-transform: uppercase; text-shadow: 0px 0px 1px rgba(#FFF, .4); color: rgba(#000, .7); font-weight: 800; margin: 5px 0 0 0; }
         .cost { margin: 0; padding: 0; list-style-type: none; text-align: center;
-            li { display: inline-block; background: #FFF; margin-left: 5px; height: 15px; line-height: 15px; font-size: 12px; border-radius: 2px; padding-right: 3px; font-weight: normal;
+            li { display: inline-block; background: #FFF; margin-left: 5px; height: 15px; line-height: 15px; font-size: 10px; border-radius: 2px; padding-right: 3px; font-weight: normal; width: auto; margin: 0 10px;
                 &.wood { background: #DE9959; }
                 &.stone { background: #737373; color: rgba(#FFF, .7); }
-                span { display: inline-block; font-size: 8px; width: 12px; height: 10px; text-align: center; line-height: 11px; border-right: 1px solid rgba(#FFF, .2); color: rgba(#000, .4); margin-right: 2px; }
+                .label { display: inline-block; font-size: 8px; width: 12px; height: 10px; text-align: center; line-height: 11px; border-right: 1px solid rgba(#FFF, .2); color: rgba(#000, .4); margin-right: 2px; }
             }
         }
         &:after { content: ''; display: block; width: 100px; height: 5px; position: absolute; bottom: 0; left: 0; background: url('../../images/panel_beige.png') bottom left; }
